khoj/database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: database
  name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: database
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: database
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: ankane/pgvector
          livenessProbe:
            exec:
              command:
                - pg_isready -U postgres
            failureThreshold: 5
            periodSeconds: 30
            timeoutSeconds: 10
          name: database
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: khoj
      restartPolicy: Always
      volumes:
        - name: khoj
          persistentVolumeClaim:
            claimName: khoj
