khoj/search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: search
  name: search
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: search
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: search
    spec:
      containers:
        - env:
            - name: SEARXNG_BASE_URL
              value: http://localhost:8080/
          image: docker.io/searxng/searxng:latest
          name: search
          volumeMounts:
            - mountPath: /etc/searxng
              name: khoj
      restartPolicy: Always
      volumes:
        - name: khoj
          persistentVolumeClaim:
            claimName: khoj
