khoj/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: server
  name: server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.34.0 (cbf2835db)
      labels:
        io.kompose.service: server
    spec:
      containers:
        # - args:
        #     - --host=0.0.0.0
        #     - --port=42110
        #     - -vv
        #     - --anonymous-mode
        #     - --non-interactive
        -
          image: ghcr.io/khoj-ai/khoj-cloud:latest
          name: server
          ports:
            - containerPort: 42110
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.khoj
              name: khoj
            - mountPath: /root/.cache/torch/sentence_transformers
              name: khoj
            - mountPath: /root/.cache/huggingface
              name: khoj
          workingDir: /app
      restartPolicy: Always
      volumes:
        - name: khoj
          persistentVolumeClaim:
            claimName: khoj
