khoj/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: database
  name: database
spec:
  ports:
    - port: 5432
      targetPort: 5432
  selector:
    io.kompose.service: database
