khoj/server-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.34.0 (cbf2835db)
  labels:
    io.kompose.service: server
  name: server
spec:
  ports:
    - port: 42110
      targetPort: 42110
  selector:
    io.kompose.service: server
