khoj/khoj-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: khoj
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd,default-oauth2-proxy-redirect@kubernetescrd,default-oauth2-proxy-forward@kubernetescrd
spec:
  ingressClassName: traefik
  rules:
  - host: khoj.codeblue.ovh
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 42110
  tls:
  - hosts:
    - khoj.codeblue.ovh
    secretName: khoj-codeblue-ovh
